    those classes are now QDate and QTime respectively, not QDateTime as they have been
    for the 4.7 and 4.8 releases.

* QGraphicsItem and derived classes - Passing a QGraphicsScene in the items constructor
  is no longer supported. Construct the item without a scene and then call
  QGraphicsScene::addItem() to add the item to the scene.

QtNetwork
---------
* QHostAddress::isLoopback() API added. Returns true if the address is
  one of the IP loopback addresses.

* QSslCertificate::serialNumber() now always returns the serial number in
  hexadecimal format.

* The openssl network backend now reads the ssl configuration file allowing
  the use of openssl engines.

QtDBus
------
* QtDBus now generates property annotations for the Qt type names
  in the org.qtproject.QtDBus namespace. When parsing such annotations
  both the old and new namespaces are accepted.

* QtDBus error codes have been updated to be on the org.qtproject.QtDBus.Error
  namespace.

QtOpenGL
--------

* Most of the classes in this module (with the notable exception of QGLWidget)
  now have equivalents in QtGui, along with the naming change QGL -> QOpenGL.
  The classes in QtOpenGL that have equivalents in QtGui can now be considered
  deprecated.

QtScript
--------


QTestLib
--------
* [QTBUG-20615] Autotests can now log test output to multiple destinations
  and log formats simultaneously.
* [QTBUG-21645] QSignalSpy now handles QVariant signal parameters more
  intuitively; the QVariant value is copied directly, instead of being
  wrapped inside a new QVariant. This means that calling
  qvariant_cast<QVariant>() on the QSignalSpy item (to "unwrap" the value)
  is no longer required (but still works).

QtSql
-----
QSqlQueryModel/QSqlTableModel/QSqlRelationalTableModel

* The dataChanged() signal is now emitted for changes made to an inserted
record that has not yet been committed. Previously, dataChanged() was
suppressed in this case for OnRowChange and OnFieldChange. This was probably